--- a/TEMPLATE/Views/Association/Indexe.cshtml
+++ b/TEMPLATE/Views/Association/Indexe.cshtml
@@ -1,137 +1,157 @@
-﻿
-
-
-@model IEnumerable<TEMPLATE.Models.association>
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
 }
 <div class="main-panel">
-    <div class="container">
+ <div class="container">
 
-        <div class="panel-header bg-primary-gradient">
-            <div class="page-inner py-3">
-                <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-                    <div>
-                        <h2 class="text-white pb-2 fw-bold">
-                            ASSOCIATION</
-                            h2>
-                    </div>
-                    <div class="ml-md-auto py-2 py-md-0">
-                        <!-- PAGE-HEADER -->
-                        <div class="page-header">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="#">ASSOCIATION</a>
-                                </li>
-                                <li class="breadcrumb-item active" aria-current="page">
-                                    Liste
-                                </li>
-                            </ol>
-                        </div>
-                        <!-- PAGE-HEADER END -->
-                    </div>
-                </div>
-            </div>
+    <div class="panel-header bg-primary-gradient">
+       <div class="page-inner py-3">
+          <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
+             <div>
+              <h2 class="text-white pb-2 fw-bold">
+                Association
+            </h2>
         </div>
-        <div class="card-body rec-pat">
-            @{
-
-                IEnumerable<TEMPLATE.Models.association> associations = ViewData["association"] as IEnumerable<TEMPLATE.Models.association>;
-                IEnumerable<TEMPLATE.Models.historique_asscociation> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_asscociation>;
-            }
-            @{
-
-                List<int> IDassocition = new List<int>();
-            }
-            @foreach (TEMPLATE.Models.historique_asscociation iteme in historiques)
-            {
-                IDassocition.Add(iteme.ID_association);
-            }
-            <div class="container-fluid">
+        <div class="ml-md-auto py-2 py-md-0">
+         <!-- PAGE-HEADER -->
+         <div class="page-header">
+            <ol class="breadcrumb">
+               <li class="breadcrumb-item">
+                  <a href="#">Home</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="#">Association</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Liste 
+          </li>
+      </ol>
+  </div>
+  <!-- PAGE-HEADER END -->
+</div>
+</div>
+</div>
+</div>
+ <div class="card-body rec-pat"> 
+        @{
+            IEnumerable<TEMPLATE.Models.recoltModel> associations = ViewData["association"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+            IEnumerable<TEMPLATE.Models.historique_asscociation> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_asscociation>;
+        }
+        @{
+            List<int> IDassocition = new List<int>();
+        }
+        @foreach (TEMPLATE.Models.historique_asscociation iteme in historiques)
+        {
+            IDassocition.Add(iteme.ID_association);
+        }
+        <div class="container-fluid">
+             <H1 style="color:blue">AFFICHER PAR:</H1>
+              <div class="container-fluid " >  
+                   @using (Html.BeginForm("Indexe", "Association", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Provinces</h2>
+                                @Html.DropDownList("ID_provinceActifs", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4"> 
+                                <h2 style="color:blue">Communes </h2>
+                                @Html.DropDownList("ID_communeActifs", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })     
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
+              </div> 
+              <div class="container-fluid">
             <a href="@Url.Action("create","association")" class=" btn btn-sm  btn-success pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
+             <div class="table-responsive" style="margin-top:40px">
              <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
                 <thead>
                 <tr style="background-color:darkturquoise">
-                    <th>
-                        NOM
-                    </th>
-                    <th>
-                        TEL
-                    </th>
-                    <th>
-                        DATE DE CREATION
-                    </th>
-                    <th>
-                        COLLINE
-                    </th>
-                    <th>
-                        ETAT
-                    </th>
-                    <th>
-                        OPTIONS
-                    </th>
-
+                    <th>NO</th>
+                    <th>NOM </th>
+                    <th>TEL</th>
+                    <th>DATE DE CREATION</th>
+                    <th>COLLINE</th>
+                    <th>ZONE</th>
+                    <th>COMMUNE</th>
+                    <th>PROVINCE</th>
+                    <th>ETAT</th>
+                    <th>OPTIONS</th>
                 </tr>
-          </thead> 
-                <tbody> 
-                @foreach (TEMPLATE.Models.association item in associations)
+                    </thead>
+                @{ int NO=0;}
+                <tbody >
+                @foreach (TEMPLATE.Models.recoltModel item in associations)
                 {
                     
 
                     if (IDassocition.Contains(item.ID_association) != true)
                     {
+                        NO++;
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NOM_association)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TEL_association)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DATE_association)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.colline.NOM_colline)
-                            </td>
-                            <td>
-                                Actif
-                            </td>
-                            <td>
+                                <td>
+                                    @NO
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.assocition)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.tel)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.date)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.colline)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.zone)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.commune)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.province)
+                                </td>
+                                <td>
+                                    Actifs
+                                </td>
+                                 <td>
                                 <div class="dropdown">
                                     <span class="dropdown-toggle dropdown-bg btn btn-outline-primary" role="button" id="dropdownMenuButton5"
                                           data-toggle="dropdown" aria-expanded="false">
                                         Actions
                                     </span>
                                     <div class="dropdown-menu dropdown-menu-right shadow-none" aria-labelledby="dropdownMenuButton5">
-                                        @Html.ActionLink("Modifier", "Edit", new { id = item.ID_association }, new { @class = "btn btn-sm btn-success " })
-                                        @Html.ActionLink("Supprime", "Delete", new { id = item.ID_association }, new { @class = "btn btn-sm btn-danger" })
+                                        @Html.ActionLink("Modifier", "Edit", new { id = item.ID }, new { @class = "btn btn-sm btn-success " })
+                                        @Html.ActionLink("Supprime", "Delete", new { id = item.ID }, new { @class = "btn btn-sm btn-danger" })
                                     </div>
                                 </div>
                             </td>
-
-                        </tr>
+                                
+                            </tr>
                     }
 
                 }
-</tbody>
+        </tbody>
             </table>
 
         </div>
     </div>
 </div>
-   
+           </div> 
 
-
+    </div>
+ </div>
      @section scripts
     {
-    <script src="~/Scripts/tables.js"></script>
+    <script src="~/Scripts/tables1.js"></script>
 }
-
-
-
-
-
 
 
