--- a/TEMPLATE/Views/StationLavage/RapportClient.cshtml
+++ b/TEMPLATE/Views/StationLavage/RapportClient.cshtml
@@ -11,7 +11,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                Rapport
+                Rapport 
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -19,7 +19,7 @@
          <div class="page-header">
             <ol class="breadcrumb">
                <li class="breadcrumb-item">
-                  <a href="#">Station</a>
+                  <a href="#">Association</a>
               </li>
               <li class="breadcrumb-item">
                 <a href="#">Rapport</a>
@@ -37,8 +37,32 @@
 <div class="card-body rec-pat" >
   <div class="container-fluid">
       <div class="row">
-    <div class="col-md-12" id="containerStationClient"></div>
+    <div class="col-md-12" id="containerAssociationClients"></div>
+    
 </div>
+             
+       <p>
+        
+   @using (Html.BeginForm("RapportClient", "Association", FormMethod.Post))
+   {
+    <div class="row">
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de début</h2>
+            <input type="datetime-local" name="startDate"  id="startDate" class="form-control total" />
+            </article>
+                           
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de fin</h2>
+            <input type="datetime-local" name="endDate" id="endDate"  class="form-control total" /></article>
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Voir</h2>
+                <input type="submit" name="submit" id="btnCreatePieChart" value="Voir"  class="btn btn-info"/>  
+        </article>
+    </div> 
+ }  
+</p>
+      
+      <div style="color:blue"><h1>@ViewBag.mot</h1></div>
       <div class="table-responsive">
         <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
            <thead>
@@ -46,6 +70,7 @@
                     <th>NO</th>
                     <th>NOM</th>
                     <th>MEMBRE</th>
+                   <th>OPTIONS</th>
               </tr>
            </thead>
             <tbody>
@@ -63,15 +88,20 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.count)
                 </td>
-                   
+                <td>
+                     @Html.ActionLink("Detail", "Details1", new { id = item.ID }, new { @class = "btn btn-sm btn-info" })
+                </td>
             </tr>
                 }
             </tbody>
         </table></div>
+
+ </div>
    </div>
 </div>
- 
-    @section scripts
-    {
-    <script src="~/Scripts/ChartStationCliente.js"></script>
+@section scripts
+{
+    <script src="~/Scripts/ChartsAssociationClient.js"></script>
+    <script src="~/Scripts/tableau.js"></script>
+    <script src="~/Scripts/tableau1.js"></script>
 }
