--- a/TEMPLATE/Views/StationLavage/Indexe.cshtml
+++ b/TEMPLATE/Views/StationLavage/Indexe.cshtml
@@ -1,116 +1,149 @@
-﻿
-
-
-@model IEnumerable<TEMPLATE.Models.station_lavage>
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
 }
 <div class="main-panel">
-    <div class="container">
+ <div class="container">
 
-        <div class="panel-header bg-primary-gradient">
-            <div class="page-inner py-3">
-                <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-                    <div>
-                        <h2 class="text-white pb-2 fw-bold">
-                            Station de lavage</
-                            h2>
-                    </div>
-                    <div class="ml-md-auto py-2 py-md-0">
-                        <!-- PAGE-HEADER -->
-                        <div class="page-header">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="#">Station de lavage</a>
-                                </li>
-                                <li class="breadcrumb-item active" aria-current="page">
-                                    Liste
-                                </li>
-                            </ol>
-                        </div>
-                        <!-- PAGE-HEADER END -->
-                    </div>
-                </div>
-            </div>
+    <div class="panel-header bg-primary-gradient">
+       <div class="page-inner py-3">
+          <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
+             <div>
+              <h2 class="text-white pb-2 fw-bold">
+                Les stations de lavage actifs @ViewBag.nomprovince
+            </h2>
         </div>
-        <div class="card-body rec-pat" >
-            @{
-                IEnumerable<TEMPLATE.Models.station_lavage> stations = ViewData["station"] as IEnumerable<TEMPLATE.Models.station_lavage>;
-                IEnumerable<TEMPLATE.Models.historique_station> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_station>;
-            }
-            @{
-                List<int> IDstation = new List<int>();
-            }
-            @foreach (TEMPLATE.Models.historique_station iteme in historiques)
-            {
-                IDstation.Add(iteme.ID_histoStation);
-            }
-            <div class="container-fluid">
-                <a href="@Url.Action("create","stationLavage")" class=" btn btn-sm  btn-success pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
-                <div class="table-responsive">
-                    <table class="table table-striped  table-bordered  " id="mytable"  style="width:100%">
-                      <thead>
-                        <tr style="background-color:darkturquoise">
-                            <th> NOM</th>
-                            <th>TEL</th>
-                            <th>DATE DE CREATION</th>
-                            <th>ZONE</th>
-                            <th>ETAT</th>
-                            <th> OPTIONS</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                            @foreach (TEMPLATE.Models.station_lavage item in stations)
-                            {
-
-                                if (IDstation.Contains(item.ID_station) != true)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.NOM_station)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TEL_station)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.DATE_insertion)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.zone.NOM_zone)
-                                        </td>
-                                        <td>
-                                            Actif
-                                        </td>
-                                        <td>
-                                            <div class="dropdown">
-                                                <span class="dropdown-toggle dropdown-bg btn btn-outline-primary" role="button" id="dropdownMenuButton5"
-                                                        data-toggle="dropdown" aria-expanded="false">
-                                                    Actions
-                                                </span>
-                                                <div class="dropdown-menu dropdown-menu-right shadow-none" aria-labelledby="dropdownMenuButton5">
-                                                    @Html.ActionLink("Modifier", "Edit", new { id = item.ID_station }, new { @class = "btn btn-sm btn-success " })
-                                                    @Html.ActionLink("Supprime", "Delete", new { id = item.ID_station }, new { @class = "btn btn-sm btn-danger" })
-                                                </div>
-                                            </div>
-                                        </td>
-
-                                    </tr>
-                                }
-
-                            }
-                      </tbody>
-                   </table>
-                </div>
-           </div>
-     </div>
+        <div class="ml-md-auto py-2 py-md-0">
+         <!-- PAGE-HEADER -->
+         <div class="page-header">
+            <ol class="breadcrumb">
+               <li class="breadcrumb-item">
+                  <a href="#">Home</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="#">Les stations de lavage actifs</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Liste 
+          </li>
+      </ol>
+  </div>
+  <!-- PAGE-HEADER END -->
 </div>
+</div>
+</div>
+</div>
+ <div class="card-body rec-pat"> 
+        @{
+            IEnumerable<TEMPLATE.Models.recoltModel> station = ViewData["station"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+            IEnumerable<TEMPLATE.Models.historique_station> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_station>;
+        }
+        @{
+            List<int> IDstation = new List<int>();
+        }
+        @foreach (TEMPLATE.Models.historique_station iteme in historiques)
+        {
+            IDstation.Add(iteme.ID_station);
+        }
+        <div class="container-fluid">
+             
+              <div class="container-fluid " >  
+                   @using (Html.BeginForm("Indexe", "StationLavage", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Provinces</h2>
+                                @Html.DropDownList("ID_provinceStat", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                          
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
+              </div> 
+              <div class="container-fluid">
+            <a href="@Url.Action("create","StationLavage")" class=" btn btn-sm  btn-success pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
+             <div class="table-responsive" style="margin-top:40px">
+             <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+                <thead>
+                <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM </th>
+                    <th>TEL</th>
+                    <th>DATE DE CREATION</th>
+                    <th>ZONE</th>
+                    <th>COMMUNE</th>
+                    <th>PROVINCE</th>
+                    <th>ETAT</th>
+                    <th>OPTIONS</th>
+                </tr>
+                    </thead>
+                @{ int NO=0;}
+                <tbody >
+                @foreach (TEMPLATE.Models.recoltModel item in station)
+                {
+                    
 
+                    if (IDstation.Contains(item.ID_association) != true)
+                    {
+                        NO++;
+                        <tr>
+                                <td>
+                                    @NO
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NOM_station)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.tel)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.date)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.zone)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.commune)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.province)
+                                </td>
+                                <td>
+                                    Actifs
+                                </td>
+                                 <td>
+                                <div class="dropdown">
+                                    <span class="dropdown-toggle dropdown-bg btn btn-outline-primary" role="button" id="dropdownMenuButton5"
+                                          data-toggle="dropdown" aria-expanded="false">
+                                        Actions
+                                    </span>
+                                    <div class="dropdown-menu dropdown-menu-right shadow-none" aria-labelledby="dropdownMenuButton5">
+                                        @Html.ActionLink("Modifier", "Edit", new { id = item.ID }, new { @class = "btn btn-sm btn-success " })
+                                        @Html.ActionLink("Supprime", "Delete", new { id = item.ID }, new { @class = "btn btn-sm btn-danger" })
+                                    </div>
+                                </div>
+                            </td>
+                                
+                            </tr>
+                    }
 
+                }
+        </tbody>
+            </table>
 
-
-
-
+        </div>
+    </div>
+</div>
+           </div> 
+</div>
+  
+     @section scripts
+    {
+    <script src="~/Scripts/tables1.js"></script>
+}
 
 
