--- a/TEMPLATE/Views/StationLavage/Create.cshtml
+++ b/TEMPLATE/Views/StationLavage/Create.cshtml
@@ -29,7 +29,7 @@
 		    </div>
 	    </div>
     </div>
-    <div class="container-fluid" style="background-color:moccasin">
+    <div class="container-fluid">
         <div class="row">
             <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
             </article>
@@ -45,48 +45,49 @@
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                            <label> Provinces :</label>
+                            <label><b style="font-size:20px"> Provinces :</label>
                             @Html.DropDownList("ID_province", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })
                             </div>
                         </div>
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                                <label> Commune :</label>
+                                <label> <b style="font-size:20px">Commune :</label>
                             @Html.DropDownList("ID_commune", new SelectList(new List<string>()), "Choisir le commune", htmlAttributes: new { @class = "form-control" })
                             </div>
                             </div>
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                                <label> zone:</label>
+                                <label> <b style="font-size:20px">zone:</label>
                             @Html.DropDownList("ID_zone", new SelectList(new List<string>()), "Choisir la zone", htmlAttributes: new { @class = "form-control" })
                             </div>
                             </div>
                         <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Nom</label>
+                                <label><b style="font-size:20px">Nom;</label>
                                 @Html.TextBoxFor(model => model.NOM_station, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.NOM_station)
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Tel</label>
+                                <label><b style="font-size:20px">Tel:</label>
                                 @Html.TextBoxFor(model => model.TEL_station, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.TEL_station)
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-12"  >
-                                <label>Date de creation</label>
-                                    @Html.TextBoxFor(model => model.DATE_insertion, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.DATE_insertion)
-                            </div>
-                        </div>
+                      
+                         <div class="form-group">
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Date:</b></label>
+                              <input type="datetime-local" name="DATE_insertion" class="form-control total " />
+                            
+                          </div>
+                       </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
-                                <input type="submit" value="Enregistre" class="btn btn-success pull-right" />
+                                <input type="submit" value="Enregistrer" class="btn btn-success pull-right" />
                             </div>
                         </div>
                     </div>
