--- a/TEMPLATE/Views/RecolteStation/RapportClient.cshtml
+++ b/TEMPLATE/Views/RecolteStation/RapportClient.cshtml
@@ -11,7 +11,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                ENREGISTREMENT DES RECOLTES DANS @Session["association"]
+                @Session["association"]
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -87,8 +87,6 @@
                     <th>NOM</th>
                     <th>PRENOM</th>
                     <th>QUANTITE</th>
-                    <th>QUALITE</th>
-                    <th>PRIX</th>
                    <th>STATION</th>
                    <th>OPTIONS</th>
               </tr>
